@@ -6,6 +6,7 @@ import com.cydeo.dto.UserDto;
 import com.cydeo.entity.Category;
 import com.cydeo.entity.Company;
 import com.cydeo.repository.CategoryRepository;
+import com.cydeo.repository.ProductRepository;
 import com.cydeo.service.CategoryService;
 import com.cydeo.service.UserService;
 import com.cydeo.util.MapperUtil;
@@ -23,11 +24,13 @@ public class CategoryServiceImpl implements CategoryService {
     private final CategoryRepository categoryRepository;
     private final MapperUtil mapperUtil;
     private final UserService userService;
+    private final ProductRepository productRepository;
 
-    public CategoryServiceImpl(CategoryRepository categoryRepository, MapperUtil mapperUtil, UserService userService) {
+    public CategoryServiceImpl(CategoryRepository categoryRepository, MapperUtil mapperUtil, UserService userService, ProductRepository productRepository) {
         this.categoryRepository = categoryRepository;
         this.mapperUtil = mapperUtil;
         this.userService = userService;
+        this.productRepository = productRepository;
     }
 
     @Override
@@ -39,12 +42,14 @@ public class CategoryServiceImpl implements CategoryService {
     @Override
     public List<CategoryDto> listAllByCompany() {
         UserDto loggedUser = userService.getLoggedUser();
-        CompanyDto companyDto = loggedUser.getCompany();
-
-        List<Category> categoryList = categoryRepository.findAllByCompanyOrderByDescriptionAsc(mapperUtil.convert(companyDto, new Company()));
-
-
-        return categoryList.stream().map(category -> mapperUtil.convert(category, new CategoryDto())).collect(Collectors.toList());
+        String title = loggedUser.getCompany().getTitle();
+        List<Category> categories = categoryRepository.findAllByCompany_Title(title);
+        return categories.stream().map(category -> {
+            CategoryDto categoryDto = mapperUtil.convert(category,new CategoryDto());
+            boolean hasProduct = productRepository.existsByCategory(category);
+            categoryDto.setHasProduct(hasProduct);
+            return categoryDto;
+        }).toList();
     }
 
     @Override
